# sui-sports

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  railway.json  render.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  Cargo.toml
apps/api/migrations/: 20250421120000_init.sql  20260422120000_iteration.sql
apps/api/src/: auth_tokens.rs  auth_user.rs  config.rs  error.rs  livekit_token.rs  main.rs  models.rs  routes.rs  state.rs  sui_rpc.rs  wallet_auth.rs
apps/web/: .env.example  package.json  playwright.config.ts  vercel.json
apps/web/app/: globals.css  layout.tsx  manifest.ts  page.tsx  providers.tsx
apps/web/app/admin/: page.tsx
apps/web/app/athlete/: page.tsx
apps/web/app/athletes/: page.tsx
apps/web/app/athletes/[id]/: page.tsx
apps/web/app/feed/: page.tsx
apps/web/app/live/: page.tsx
apps/web/app/live/[sessionId]/: page.tsx
apps/web/app/notifications/: page.tsx
apps/web/app/start/: page.tsx
apps/web/components/: Nav.tsx  PwaRegister.tsx  WalletAuthSync.tsx
apps/web/e2e/: smoke.spec.ts
apps/web/hooks/: use-athletes.ts  use-install-prompt.ts  use-me.ts  use-notifications.ts
apps/web/lib/: api.ts  push.ts  store.ts
apps/web/public/: sw.js
contracts/move/sui_sports/: Move.toml
contracts/move/sui_sports/sources/: athlete_registry.move  subscription.move
