[package]
name = "sui-sports-api"
version = "0.1.0"
edition = "2021"
description = "Axum API + realtime for Sui Sports"

[dependencies]
axum = { version = "0.8.9", features = ["macros", "ws"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace", "limit", "fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "uuid",
    "time",
    "json",
] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
# `serde-human-readable` makes OffsetDateTime serialize as a string in JSON (not a 9-tuple).
time = { version = "0.3.41", features = ["serde", "serde-human-readable"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
jsonwebtoken = { version = "10.3", default-features = false, features = ["rust_crypto"] }
reqwest = { version = "0.12.24", features = ["json"] }
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
futures-util = "0.3.31"
base64 = "0.22.1"
hex = "0.4.3"
sha2 = "0.10.9"
hmac = "0.12.1"
rand = "0.9.2"
dashmap = "6.1.0"
dotenvy = "0.15.7"
